Add cart functionality and product display pages
- Created cart.php for managing the shopping cart.
- Implemented cartProses.php to handle adding items to the cart.
- Developed home.php to display a list of products with images, names, stock, and prices.
- Added produk.php to show detailed product information and allow users to add items to the cart with quantity selection.
- Integrated Bootstrap for responsive design and improved UI

--- a/admin/announcement.html
+++ b/admin/announcement.html
@@ -21,8 +21,8 @@
 <body style="background-color: #ffffff;">
 
     <header class="d-flex flex-wrap justify-content-between align-items-center p-3 px-5">
-        <a href="home.html" class="d-flex align-items-center text-decoration-none">
-            <img src="/logo.png" alt="logo.png" height="80" class="me-2">
+        <a href="announcement.html" class="d-flex align-items-center text-decoration-none">
+            <img src="/asset/logo.png" alt="logo.png" height="80" class="me-2">
             <h2 class="text-white mb-0">Apotek K25</h2>
         </a>
         <div class="d-flex flex-wrap justify-content-end align-items-center">
